--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -7,7 +7,9 @@ android {
         flatDir {
             dirs 'libs'
         }
+
     }
+
 
     defaultConfig {
         applicationId "edu.zju.huyifeng.sportwear"
@@ -22,18 +24,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
+
+
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile(name:'williamchart-1.7.0', ext:'aar')
-    compile(name:'circular-progress-drawable-1.3', ext:'aar')
+    compile(name: 'williamchart-1.7.0', ext: 'aar')
+    compile(name: 'circular-progress-drawable-1.3', ext: 'aar')
     wearApp project(':wear')
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.google.android.gms:play-services:6.5.87'
     compile "com.android.support:appcompat-v7:21.0.0"
     compile 'com.android.support:recyclerview-v7:21.0.0'
-
-//    compile 'com.db.williamchart:library:1.7.0'
-
+    compile 'de.hdodenhof:circleimageview:1.2.2'
+    compile project(':extended-list-library')
+    compile 'com.akexorcist:RoundCornerProgressBar:1.1.0'
 }
